--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -31,7 +33,7 @@
             android:label="@string/title_activity_requests"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".MakeRequest"
+            android:name=".MainUI.MakeRequest"
             android:label="@string/title_activity_make_request"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
