Can now reset password with questions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,14 @@
             android:name=".MainUI.AddPassword"
             android:label="@string/title_activity_addPass"
             ></activity>
+        <activity
+            android:name=".MainUI.ResetPassword"
+            android:label="@string/title_activity_resetPass"
+            ></activity>
+        <activity
+            android:name=".MainUI.RemoveRequest"
+            android:label="@string/title_activity_resetPass"
+            ></activity>
 
     </application>
 
